--- a/read.html
+++ b/read.html
@@ -259,7 +259,7 @@
     }
 
 	var btitle = getParameterByName('title');
-  var url = 'http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com:8080/usr/local/tomcat9/webapps/llj/read.jsp?title='+btitle;
+  var url = 'http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com:8080/llj/read.jsp?title='+btitle;
 
     
     axios.get(url)
