--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav>
             <div>
                 <ul class="menu">
-                <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/index.html" font-size:3em>Home</a></li>
+                <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/index.html" font-size:3em>Home</a></li>
                 </ul>
             </div>
             <div>
                 <ul class="menu">
-                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/signup.html">회원가입</a></li>
-                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/signin.html">로그인</a></li>
+                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/signup.html">회원가입</a></li>
+                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/signin.html">로그인</a></li>
                 </ul>
             </div>
         </nav>
@@ -49,17 +49,17 @@
                 </div>
                 <div class="category2-box">
                     <div>
-                        <div class="nightmarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=황부자며느리야시장'"></div>
+                        <div class="nightmarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=황부자며느리야시장'"></div>
                         <div class="category4-link">황부자 며느리 야시장</div>
 
                     </div>
                     <div>
-                        <div class="nightmarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=한빛야시장'"></div>
+                        <div class="nightmarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=한빛야시장'"></div>
                         <div class="category4-link">한빛 야시장</div>
 
                     </div>
                     <div>
-                        <div class="nightmarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=월매야시장'"></div>
+                        <div class="nightmarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=월매야시장'"></div>
                         <div class="category4-link">월매 야시장</div>
 
                     </div>
