--- a/login.html
+++ b/login.html
@@ -13,14 +13,14 @@
         <nav>
             <div>
                 <ul class="menu">
-                <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/login.html" font-size:3em>Home</a></li>
+                <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/login.html" font-size:3em>Home</a></li>
                 </ul>
             </div>
             <div>
                 <ul class="menu">
-                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/create.html">글쓰기</a></li>
+                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/create.html">글쓰기</a></li>
                     <li><a href="#">마이페이지</a></li>
-                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/index.html">로그아웃</a></li>
+                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/index.html">로그아웃</a></li>
                 </ul>
             </div>
         </nav>
@@ -52,17 +52,17 @@
                 </div>
                 <div class="category2-box">
                     <div>
-                        <div class="nightmarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=황부자며느리야시장'"></div>
+                        <div class="nightmarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=황부자며느리야시장'"></div>
                         <div class="category4-link">황부자 며느리 야시장</div>
 
                     </div>
                     <div>
-                        <div class="nightmarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=한빛야시장'"></div>
+                        <div class="nightmarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=한빛야시장'"></div>
                         <div class="category4-link">한빛 야시장</div>
 
                     </div>
                     <div>
-                        <div class="nightmarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=월매야시장'"></div>
+                        <div class="nightmarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=월매야시장'"></div>
                         <div class="category4-link">월매 야시장</div>
 
                     </div>
@@ -76,16 +76,16 @@
                 </div>
                 <div class="category2-box">
                     <div>
-                        <div class="freemarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=홍대앞 프리마켓'"></div>
+                        <div class="freemarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=홍대앞 프리마켓'"></div>
                         <div class="category4-link">홍대 앞 프리마켓</div>
 
                     </div>
                     <div>
-                        <div class="freemarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=부기상회'"></div>
+                        <div class="freemarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=부기상회'"></div>
                         <div class="category4-link">부기상회</div>
                     </div>
                     <div>
-                        <div class="freemarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=마실나온 기버마켓'"></div>
+                        <div class="freemarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=마실나온 기버마켓'"></div>
                         <div class="category4-link">마실나온 기버마켓</div>
                     </div>
                 </div>
@@ -98,17 +98,17 @@
                 </div>
                 <div class="category2-box">
                     <div>
-                        <div class="concert1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=더 크라이 크리스마스 힙합 뮤직 패스티벌 연말 콘서트'"></div>
+                        <div class="concert1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=더 크라이 크리스마스 힙합 뮤직 패스티벌 연말 콘서트'"></div>
                         <div class="category4-link">더 크라이 크리스마스 힙합 뮤직</div>
 
                     </div>
                     <div>
-                        <div class="concert2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=용의자X의 헌신'"></div>
+                        <div class="concert2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=용의자X의 헌신'"></div>
                         <div class="category4-link">용의자X의 헌신</div>
 
                     </div>
                     <div>
-                        <div class="concert3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=제주하모니'"></div>
+                        <div class="concert3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=제주하모니'"></div>
                         <div class="category4-link">제주하모니</div>
 
                     </div>
