--- a/create.html
+++ b/create.html
@@ -71,7 +71,7 @@
     </nav>
   </header>
   <main>
-  <form action="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com:8080/llj/create.jsp" method="post">
+  <form action="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/create.jsp" method="post">
     <div class="py-vh-5 w-100 overflow-hidden" id="services">
       <div class="container">
         <div class="row d-flex justify-content-end">
