--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
                 </div>
                 <div class="category2-box">
                     <div>
-                        <div class="freemarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=홍대앞 프리마켓'"></div>
+                        <div class="freemarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=홍대앞 프리마켓'"></div>
                         <div class="category4-link">홍대 앞 프리마켓</div>
 
                     </div>
                     <div>
-                        <div class="freemarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=부기상회'"></div>
+                        <div class="freemarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=부기상회'"></div>
                         <div class="category4-link">부기상회</div>
                     </div>
                     <div>
-                        <div class="freemarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=마실나온 기버마켓'"></div>
+                        <div class="freemarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=마실나온 기버마켓'"></div>
                         <div class="category4-link">마실나온 기버마켓</div>
                     </div>
                 </div>
@@ -95,17 +95,17 @@
                 </div>
                 <div class="category2-box">
                     <div>
-                        <div class="concert1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=더 크라이 크리스마스 힙합 뮤직 패스티벌 연말 콘서트'"></div>
+                        <div class="concert1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=더 크라이 크리스마스 힙합 뮤직 패스티벌 연말 콘서트'"></div>
                         <div class="category4-link">더 크라이 크리스마스 힙합 뮤직</div>
 
                     </div>
                     <div>
-                        <div class="concert2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/html/read.html?title=용의자X의 헌신'"></div>
+                        <div class="concert2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=용의자X의 헌신'"></div>
                         <div class="category4-link">용의자X의 헌신</div>
 
                     </div>
                     <div>
-                        <div class="concert3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/var/www/htmls/read.html?title=제주하모니'"></div>
+                        <div class="concert3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=제주하모니'"></div>
                         <div class="category4-link">제주하모니</div>
 
                     </div>
