--- a/signin.html
+++ b/signin.html
@@ -60,7 +60,7 @@
               <br><br><br><br><br><br><br><br><br>
               <h1>Login</h1>
               
-<form class="row" action="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/signin.jsp" method="post">
+<form class="row" action="http://localhost:8080/ex01/signin.jsp" method="post">
   <div class="col-12 col-lg-10 col-xl-8">
     <div class="mb-3">
       <label for="username" class="form-label">Email address</label>
