--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title> 행사의 모든것 </title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/theme.css">
    </head>
 
 <body>
@@ -13,15 +14,19 @@
         <nav>
             <div>
                 <ul class="menu">
-                <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/login.html" font-size:3em>Home</a></li>
+                <li><a href="http://localhost/login.html" font-size:3em>Home</a></li>
                 </ul>
             </div>
             <div>
                 <ul class="menu">
-                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/create.html">글쓰기</a></li>
-                    <li><a href="#">마이페이지</a></li>
-                    <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/index.html">로그아웃</a></li>
-                </ul>
+                    <li><button class="btn btn-primary" type="submit" OnClick="location.href = 'http://localhost/create.html'">글쓰기</button></li>
+                    <li>
+                    <form id="mForm" action="http://localhost/mypage.html">
+                        <input type="hidden" name="member" id="member"  />
+                        <button class="btn btn-primary" type="submit">마이페이지</button>
+                    </form>
+                    </li>
+                    <li><button class="btn btn-primary" type="submit" OnClick="location.href = 'http://localhost/index.html'">로그아웃</button></li>                </ul>
             </div>
         </nav>
     </header>
@@ -52,17 +57,17 @@
                 </div>
                 <div class="category2-box">
                     <div>
-                        <div class="nightmarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=황부자며느리야시장'"></div>
+                        <div class="nightmarket1-img" OnClick="location.href ='http://localhost/read.html?title=황부자며느리야시장'"></div>
                         <div class="category4-link">황부자 며느리 야시장</div>
 
                     </div>
                     <div>
-                        <div class="nightmarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=한빛야시장'"></div>
+                        <div class="nightmarket2-img" OnClick="location.href ='http://localhost/read.html?title=한빛야시장'"></div>
                         <div class="category4-link">한빛 야시장</div>
 
                     </div>
                     <div>
-                        <div class="nightmarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=월매야시장'"></div>
+                        <div class="nightmarket3-img" OnClick="location.href ='http://localhost/read.html?title=월매야시장'"></div>
                         <div class="category4-link">월매 야시장</div>
 
                     </div>
@@ -76,16 +81,16 @@
                 </div>
                 <div class="category2-box">
                     <div>
-                        <div class="freemarket1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=홍대앞 프리마켓'"></div>
+                        <div class="freemarket1-img" OnClick="location.href ='http://localhost/read.html?title=홍대앞 프리마켓'"></div>
                         <div class="category4-link">홍대 앞 프리마켓</div>
 
                     </div>
                     <div>
-                        <div class="freemarket2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=부기상회'"></div>
+                        <div class="freemarket2-img" OnClick="location.href ='http://localhost/read.html?title=부기상회'"></div>
                         <div class="category4-link">부기상회</div>
                     </div>
                     <div>
-                        <div class="freemarket3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=마실나온 기버마켓'"></div>
+                        <div class="freemarket3-img" OnClick="location.href ='http://localhost/read.html?title=마실나온 기버마켓'"></div>
                         <div class="category4-link">마실나온 기버마켓</div>
                     </div>
                 </div>
@@ -98,27 +103,36 @@
                 </div>
                 <div class="category2-box">
                     <div>
-                        <div class="concert1-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=더 크라이 크리스마스 힙합 뮤직 패스티벌 연말 콘서트'"></div>
+                        <div class="concert1-img" OnClick="location.href ='http://localhost/read.html?title=더 크라이 크리스마스 힙합 뮤직 패스티벌 연말 콘서트'"></div>
                         <div class="category4-link">더 크라이 크리스마스 힙합 뮤직</div>
 
                     </div>
                     <div>
-                        <div class="concert2-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=용의자X의 헌신'"></div>
+                        <div class="concert2-img" OnClick="location.href ='http://localhost/read.html?title=용의자X의 헌신'"></div>
                         <div class="category4-link">용의자X의 헌신</div>
 
                     </div>
                     <div>
-                        <div class="concert3-img" OnClick="location.href ='http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/read.html?title=제주하모니'"></div>
+                        <div class="concert3-img" OnClick="location.href ='http://localhost/read.html?title=제주하모니'"></div>
                         <div class="category4-link">제주하모니</div>
 
                     </div>
                 </div>
             </div>
         </section>
-
     </main>
 
 
-
+<script>
+    function getParameterByName(name) {
+        name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+        var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+            results = regex.exec(location.search);
+        return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+    }
+    var mmember = getParameterByName('member');
+    document.getElementById('member').value = mmember;
+    console.log(mmember);
+</script>
 </body>
 </html>
