--- a/create.html
+++ b/create.html
@@ -58,20 +58,20 @@
     <nav>
         <div>
             <ul class="menu">
-            <li><a href="http://localhost/index.html" font-size:3em>Home</a></li>
+            <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/index.html" font-size:3em>Home</a></li>
             </ul>
         </div>
         <div>
             <ul class="menu">
-                <li><a href="http://localhost/create.html">글쓰기</a></li>
+                <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/create.html">글쓰기</a></li>
                 <li><a href="#">마이페이지</a></li>
-                <li><a href="http://localhost/index.html">로그아웃</a></li>
+                <li><a href="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/index.html">로그아웃</a></li>
             </ul>
         </div>
     </nav>
   </header>
   <main>
-  <form action="http://localhost:8080/ex01/create.jsp" method="post">
+  <form action="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/create.jsp" method="post">
     <div class="py-vh-5 w-100 overflow-hidden" id="services">
       <div class="container">
         <div class="row d-flex justify-content-end">
