--- a/signup.html
+++ b/signup.html
@@ -59,7 +59,7 @@
               <br><br><br>
               <h1>Register a new account</h1>
               
-<form class="row" action="http://localhost:8080/ex01/signup.jsp">
+<form class="row" action="http://llj-web-lb-15022402-b5dd0ab26565.kr.lb.naverncp.com/signup.jsp">
   <div class="col-12 col-lg-10 col-xl-8">
   <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Email address</label>
