--- a/create.html
+++ b/create.html
@@ -64,8 +64,8 @@
         <div>
             <ul class="menu">
                 <li><a href="https://www.haengsa.kro.kr/create.html">글쓰기</a></li>
-                <li><a href="#">마이페이지</a></li>
-                <li><a href="https://www.haengsa.kro.kr/index.html">로그아웃</a></li>
+                <li><a href="https://www.haengsa.kro.kr/mypage.html">마이페이지</a></li>
+                <li><a href="https://www.haengsa.kro.kr/logout.jsp">로그아웃</a></li>
             </ul>
         </div>
     </nav>
