--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div>
                 <ul class="menu">
-                <li><a href="https://www.haengsa.kro.kr/index.html" font-size:3em>Home</a></li>
+                <li><a href="https://www.haengsa.kro.kr" font-size:3em>Home</a></li>
                 </ul>
             </div>
             <div>
@@ -33,8 +33,8 @@
         <section class="sec">
             <div class="sec-container">
                 <hr>
-                <form class="sub-form" action="#">
-                    <div><input type="text" placeholder="검색" name="search"></div>
+                <form class="sub-form" action="https://www.haengsa.kro.kr/read.html" method="get">
+                    <div><input type="text" placeholder="검색" name="title"></div>
                     <div><input type="date" placeholder="mm/dd/yyyy" name="date"></div>
                     <div><input type="region" placeholder="지역" name="region"></div>
                     <div><button type="submit"><i class="material-icons" style="font-size:40px">search</i></button></div>
@@ -44,8 +44,8 @@
         </section>
         <section class="sec">
             <div class="sec-container">
-                <div class="sec-title">
-                    야시장 {{ Random 지역 }}
+                <div class="sec-title" OnClick="location.href='https://www.haengsa.kro.kr/list.html'" style="cursor:pointer;">
+                    야시장
                 </div>
                 <div class="category2-box">
                     <div>
@@ -68,8 +68,8 @@
         </section>
         <section class="sec">
             <div class="sec-container">
-                <div class="sec-title">
-                    프리마켓 {{ random 지역 }}
+                <div class="sec-title" OnClick="location.href='https://www.haengsa.kro.kr/list.html'" style="cursor:pointer;">
+                    프리마켓
                 </div>
                 <div class="category2-box">
                     <div>
@@ -90,8 +90,8 @@
         </section>
         <section class="sec">
             <div class="sec-container">
-                <div class="sec-title">
-                    공연 {{ Random 지역 }}
+                <div class="sec-title" OnClick="location.href='https://www.haengsa.kro.kr/list.html'" style="cursor:pointer;">
+                    공연
                 </div>
                 <div class="category2-box">
                     <div>
