--- a/mypage.html
+++ b/mypage.html
@@ -18,7 +18,7 @@
     <nav>
         <div>
             <ul class="menu">
-            <li><a href="#" font-size:3em>Home</a></li>
+            <li><a href="https://www.haengsa.kro.kr" font-size:3em>Home</a></li>
             </ul>
         </div>
         <div>
@@ -72,221 +72,6 @@
         <div class="col-sm-6">
             <div><p class="mb-sm-0"></p></div>
         </div>
-        <div class="col-sm-6">
-            <div class="float-sm-end">
-                <button class="sub-btn">삭제</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row align-items-center">
-        <div class="col-md-6">
-            <div class="mb-3">
-                <br>
-                <h5 class="card-title">저장된 행사 <span class="text-muted fw-normal ms-2">{{게시글 수}}</span></h5>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="d-flex flex-wrap align-items-center justify-content-end gap-2 mb-3">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="">
-                <div class="table-responsive">
-                    <table class="table project-list-table table-nowrap align-middle table-borderless">
-                        <thead>
-                            <tr>
-                                <th scope="col" class="ps-4" style="width: 50px;">
-                                    <div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck" /><label class="form-check-label" for="contacusercheck"></label></div>
-                                </th>
-                                <th scope="col">작성자</th>
-                                <th scope="col">제목</th>
-                                <th scope="col">지역</th>
-                                <th scope="col">날짜</th>
-                                <th scope="col" style="width: 200px;">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row" class="ps-4">
-                                    <div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck1" /><label class="form-check-label" for="contacusercheck1"></label></div>
-                                </th>
-                                <td><a href="#" class="text-body">{{작성자}}</a></td>
-                                <td><span class="badge badge-soft-success mb-0">{{행사 제목}}</span></td>
-                                <td>{{지역}}</td>
-                                <td>{{날짜}}</td>
-                                <td>
-                                    <ul class="list-inline mb-0">
-                                        <button class="sub-btn">보기</button>
-                                        <button class="sub-btn">예약</button>
-                                        <button class="sub-btn">삭제</button>
-                                    </ul>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row g-0 align-items-center pb-4">
-        <div class="col-sm-6">
-            <div><p class="mb-sm-0"></p></div>
-        </div>
-        <div class="col-sm-6">
-            <div class="float-sm-end">
-                <button class="sub-btn">삭제</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row align-items-center">
-        <div class="col-md-6">
-            <div class="mb-3">
-                <br>
-                <h5 class="card-title">요청한 행사 <span class="text-muted fw-normal ms-2">{{게시글 수}}</span></h5>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="d-flex flex-wrap align-items-center justify-content-end gap-2 mb-3">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="">
-                <div class="table-responsive">
-                    <table class="table project-list-table table-nowrap align-middle table-borderless">
-                        <thead>
-                            <tr>
-                                <th scope="col" class="ps-4" style="width: 50px;">
-                                    <div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck" /><label class="form-check-label" for="contacusercheck"></label></div>
-                                </th>
-                                <th scope="col">작성자</th>
-                                <th scope="col">제목</th>
-                                <th scope="col">지역</th>
-                                <th scope="col">날짜</th>
-                                <th scope="col" style="width: 200px;">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row" class="ps-4">
-                                    <div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck1" /><label class="form-check-label" for="contacusercheck1"></label></div>
-                                </th>
-                                <td><a href="#" class="text-body">{{작성자}}</a></td>
-                                <td><span class="badge badge-soft-success mb-0">{{행사 제목}}</span></td>
-                                <td>{{지역}}</td>
-                                <td>{{날짜}}</td>
-                                <td>
-                                    <ul class="list-inline mb-0">
-                                        <button class="sub-btn">보기</button>
-                                        <button class="sub-btn">수정</button>
-                                        <button class="sub-btn">삭제</button>
-                                    </ul>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row g-0 align-items-center pb-4">
-        <div class="col-sm-6">
-            <div><p class="mb-sm-0"></p></div>
-        </div>
-        <div class="col-sm-6">
-            <div class="float-sm-end">
-                <button class="sub-btn">삭제</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="row align-items-center">
-        <div class="col-md-6">
-            <div class="mb-3">
-                <br>
-                <h5 class="card-title">승인된 행사 <span class="text-muted fw-normal ms-2">{{게시글 수}}</span></h5>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="d-flex flex-wrap align-items-center justify-content-end gap-2 mb-3">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="">
-                <div class="table-responsive">
-                    <table class="table project-list-table table-nowrap align-middle table-borderless">
-                        <thead>
-                            <tr>
-                                <th scope="col" class="ps-4" style="width: 50px;">
-                                    <div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck" /><label class="form-check-label" for="contacusercheck"></label></div>
-                                </th>
-                                <th scope="col">작성자</th>
-                                <th scope="col">제목</th>
-                                <th scope="col">지역</th>
-                                <th scope="col">날짜</th>
-                                <th scope="col" style="width: 200px;">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row" class="ps-4">
-                                    <div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck1" /><label class="form-check-label" for="contacusercheck1"></label></div>
-                                </th>
-                                <td><a href="#" class="text-body">{{작성자}}</a></td>
-                                <td><span class="badge badge-soft-success mb-0">{{행사 제목}}</span></td>
-                                <td>{{지역}}</td>
-                                <td>{{날짜}}</td>
-                                <td>
-                                    <ul class="list-inline mb-0">
-                                        <button class="sub-btn">보기</button>
-                                        <button class="sub-btn">수정</button>
-                                        <button class="sub-btn">삭제</button>
-                                    </ul>
-                                </td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <th scope="row" class="ps-4">
-                                    <div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck1" /><label class="form-check-label" for="contacusercheck1"></label></div>
-                                </th>
-                                <td><a href="#" class="text-body">{{작성자}}</a></td>
-                                <td><span class="badge badge-soft-success mb-0">{{행사 제목}}</span></td>
-                                <td>{{지역}}</td>
-                                <td>{{날짜}}</td>
-                                <td>
-                                    <ul class="list-inline mb-0">
-                                        <button class="sub-btn">보기</button>
-                                        <button class="sub-btn">수정</button>
-                                        <button class="sub-btn">삭제</button>
-                                    </ul>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row g-0 align-items-center pb-4">
-        <div class="col-sm-6">
-            <div><p class="mb-sm-0"></p></div>
-        </div>
-        <div class="col-sm-6">
-            <div class="float-sm-end">
-                <button class="sub-btn">삭제</button>
-            </div>
-        </div>
     </div>
 </div>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -306,7 +91,7 @@
                 console.log(json);
                 for (var i = 0; i < json.length; i++) {
 
-                    document.getElementById('booked').innerHTML += '<tbody><tr><th scope="row" class="ps-4"><div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck1" /><label class="form-check-label" for="contacusercheck1"></label></div></th><td><a href="#" class="text-body">'+json[i].writer+'</a></td><td><span class="badge badge-soft-success mb-0">'+json[i].board_title+'</span></td><td>'+json[i].region+'</td><td>'+json[i].bdate+'</td><td><ul class="list-inline mb-0"><button class="sub-btn">보기</button><button class="sub-btn">예약</button><button class="sub-btn">삭제</button></ul></td></tr></tbody>';      
+                    document.getElementById('booked').innerHTML += '<tbody><tr><th scope="row" class="ps-4"><div class="form-check font-size-16"><input type="checkbox" class="form-check-input" id="contacusercheck1" /><label class="form-check-label" for="contacusercheck1"></label></div></th><td><a href="#" class="text-body">'+json[i].writer+'</a></td><td><span class="badge badge-soft-success mb-0">'+json[i].board_title+'</span></td><td>'+json[i].region+'</td><td>'+json[i].bdate+'</td><td><ul class="list-inline mb-0"><button class="sub-btn" onclick="location.href=\'https://www.haengsa.kro.kr/delres.jsp?member='+mmember+'&title='+json[i].board_title+'\';">삭제</button></ul></td></tr></tbody>';      
                 }
 
             })
